Fixed Horizontal Scrollbar Issue
Fixed an issue where a horizontal scrollbar would appear on Chromium browsers with the 'containerDiv' element. Also optimized the CSS formatting.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -125,9 +125,8 @@ h3 {
     position: relative;
     box-sizing: border-box;
     padding: 50px;
-    width: 100vw;
+    width: Calc( 100vw - 8px ); /* Used to fix Chromium browsers from creating a horizontal scroll bar.*/
     margin-left: calc(-50vw + 50%);
-    background-image: url( "/images/circuit.png");
     background-size: cover;
     background-attachment: fixed;
     background-color: #fff;
@@ -135,6 +134,18 @@ h3 {
     margin-bottom: 25px;
 
     overflow: hidden;
+
+}
+
+.circuitBackground {
+    background-image: url( "/images/circuit.png");
+}
+
+/* Revert Width Changes For Firefox Browsers */
+@-moz-document url-prefix() {
+    .containerDiv {
+        width: 100vw;
+    }
 
 }
 
@@ -214,7 +225,7 @@ h3 {
 
 .videoBackground {
     position: absolute;
-    top: 0;
+    top: ;
     left: 0;
     width: 100%;
     height: 100%;
@@ -241,6 +252,7 @@ h3 {
 .burnItUpBackground {
     background-attachment: revert;
     background-image: url( '/images/BurnItUpWebsiteGraphic.png' );
+    background-position-x: 75%;
 }
 
 .projectElement {
